fix: dark mode toggle

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -141,3 +141,22 @@ kbd {
     --enter-stage: 20 !important;
   }
 }
+
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+::view-transition-old(root) {
+  z-index: 1;
+}
+::view-transition-new(root) {
+  z-index: 9999;
+}
+.dark::view-transition-old(root) {
+  z-index: 9999;
+}
+.dark::view-transition-new(root) {
+  z-index: 1;
+}
